--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+-f https://download.pytorch.org/whl/torch_stable.html
+
+torch==1.7.0+cpu
+torchvision==0.8.0+cpu
 fastai
 fastcore
 voila
 ipywidgets
 Pillow==8.2.0
+torch==1.7.0
+torchvision==0.8.0
