--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 
 torch==1.7.0+cpu
-torchvision==0.8.0+cpu
+torchvision==0.8.0
 fastai
 fastcore
 voila
